use stereo video and opencv to test, not libpng

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ set (LIBVISO2_SRC_DIR src)
 include_directories("${LIBVISO2_SRC_DIR}")
 
 # use sse3 instruction set
-SET(CMAKE_CXX_FLAGS "-msse3")
+set(CMAKE_CXX_FLAGS "-msse3 -std=c++11")
 
 # sources
 FILE(GLOB LIBVISO2_SRC_FILES "src/*.cpp")
@@ -17,7 +17,9 @@ FILE(GLOB LIBVISO2_SRC_FILES "src/*.cpp")
 # make release version
 set(CMAKE_BUILD_TYPE Release)
 
+find_package(OpenCV 3 REQUIRED)
+include_directories(${OpenCV_INCLUDE_DIRS})
+
 # demo program
 add_executable(viso2 ${LIBVISO2_SRC_FILES})
-target_link_libraries (viso2 png)
-
+target_link_libraries (viso2 ${OpenCV_LIBRARIES} -lpthread)
